WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132898
m_layerForOverhangAreas is sometimes not positioned correctly when topContentInset has changed
https://bugs.webkit.org/show_bug.cgi?id=132898
Summary
m_layerForOverhangAreas is sometimes not positioned correctly when topContent...
Beth Dakin
Reported
2014-05-13 20:51:43 PDT
m_layerForOverhangAreas is sometimes not positioned correctly when topContentInset has changed <
rdar://problem/16644710
>
Attachments
Patch
(2.29 KB, patch)
2014-05-13 20:54 PDT
,
Beth Dakin
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-05-13 20:54:41 PDT
Created
attachment 231431
[details]
Patch
Beth Dakin
Comment 2
2014-05-13 20:59:33 PDT
Thanks Anders!
http://trac.webkit.org/changeset/168777
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug