m_layerForOverhangAreas is sometimes not positioned correctly when topContentInset has changed https://bugs.webkit.org/show_bug.cgi?id=132898 -and corresponding- <rdar://problem/16644710>

Reviewed by Anders Carlsson.

This function is called whenever the topContentInset changes, so use it as an
opportunity to ensure that m_layerForOverhangAreas has been positioned correctly.
* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::frameViewDidChangeSize):

Everyone gets an anchor point!
(WebCore::RenderLayerCompositor::updateOverflowControlsLayers):



Canonical link: https://commits.webkit.org/150951@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168777 268f45cc-cd09-0410-ab3c-d52691b4dbfc